# inspect-dynspec

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-cargo-master.yml
inspect_dynspec/: __init__.py  compare_kron_matvec.py  gpr_smooth.py  gpr_smooth_hetero.py  inspect_dynspec.py  inspect_dynspec.yml
inspect_dynspec/images/: cargo-manifest.yml
inspect_dynspec/images/dynspec/: Dockerfile.branch  astropy.cfg
inspect_dynspec/images/inspectdynspec/: Dockerfile.branch
inspect_dynspec/images/ms2dynspec/: Dockerfile.branch  astropy.cfg
scripts/: find_more_targets.py
